@@ -32,6 +32,10 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "FetchDailyCandles", "sample
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "ScheduleSample", "samples\ScheduleSample\ScheduleSample.csproj", "{119E7BB3-4B97-4824-9CA7-0D4C9B57590D}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "DxFeedReconnectSample", "samples\DxFeedReconnectSample\DxFeedReconnectSample.csproj", "{C457D53F-A033-465C-B250-A6CC60D02F98}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "SimpleAuthSample", "samples\SimpleAuthSample\SimpleAuthSample.csproj", "{B9088D14-10F6-4D88-876D-062B9F6494AB}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|Any CPU = Debug|Any CPU
@@ -94,6 +98,14 @@ Global
 		{119E7BB3-4B97-4824-9CA7-0D4C9B57590D}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{119E7BB3-4B97-4824-9CA7-0D4C9B57590D}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{119E7BB3-4B97-4824-9CA7-0D4C9B57590D}.Release|Any CPU.Build.0 = Release|Any CPU
+		{C457D53F-A033-465C-B250-A6CC60D02F98}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{C457D53F-A033-465C-B250-A6CC60D02F98}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{C457D53F-A033-465C-B250-A6CC60D02F98}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{C457D53F-A033-465C-B250-A6CC60D02F98}.Release|Any CPU.Build.0 = Release|Any CPU
+		{B9088D14-10F6-4D88-876D-062B9F6494AB}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{B9088D14-10F6-4D88-876D-062B9F6494AB}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{B9088D14-10F6-4D88-876D-062B9F6494AB}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{B9088D14-10F6-4D88-876D-062B9F6494AB}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(NestedProjects) = preSolution
 		{73597E04-D8A8-4991-A759-7F886CBE2A8F} = {C4490D74-2970-4A1B-8178-A724A06B140A}
@@ -108,5 +120,7 @@ Global
 		{C2F0FF7C-4675-4D5F-AE90-0E8DA33A1EB8} = {C4490D74-2970-4A1B-8178-A724A06B140A}
 		{0797D7A4-3572-457B-AAD9-3F26098D4BDD} = {C4490D74-2970-4A1B-8178-A724A06B140A}
 		{119E7BB3-4B97-4824-9CA7-0D4C9B57590D} = {C4490D74-2970-4A1B-8178-A724A06B140A}
+		{C457D53F-A033-465C-B250-A6CC60D02F98} = {C4490D74-2970-4A1B-8178-A724A06B140A}
+		{B9088D14-10F6-4D88-876D-062B9F6494AB} = {C4490D74-2970-4A1B-8178-A724A06B140A}
 	EndGlobalSection
 EndGlobal
