@@ -1,3 +1,4 @@
+* Feature: Add DxFeedReconnectSample
 * Fix: Schedule memory leak
 
 ## Version 2.0.1
